--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,78 @@
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+}
+
+/* HOMEWORK ACTION: Make the header a flexbox... */
+.header h1 {
+  display: inline-block;
+}
+
+.header nav {
+  float: right;
+  padding-top: 15px;
+  margin-right: 20px;
+}
+
+.header li {
+  display: inline-block;
+  padding-right: 25px;
+}
+
+main {
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.titles {
+  flex-basis: 130px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  border-right: 3px solid black;
+  text-align: right;
+  padding-right: 20px;
+}
+
+.content {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .about {
   display: flex;
+  width: 100%;
+  order: 0;
+  padding-bottom: 50px;
 }
-
-.titles {
-  padding-left: 50px;
-  padding-right: 20px;
-  border-right: 3px solid black;
-  color: black;
-  text-align: right;
-}
-
-#about-details {
-  padding-left: 35px;
-  padding-right: 100px;
-}
-
 .work {
   display: flex;
+  width: 100%;
+  order: 1;
+  padding-bottom: 50px;
+}
+.contact {
+  display: flex;
+  width: 100%;
+  order: 2;
+  padding-bottom: 50px;
 }
 
+/* using flex allows you to control where you want the contact details and links to show on the page */
+/* margin and padding of 0 clears out the default styling */
+#contact-list ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
+#contact-list li {
+  display: inline-block;
+  padding-top: 40px;
+  padding-right: 40px;
+}
+
+.footer {
+  text-align: center;
+}
