--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: black;
 }
 
 /* HOMEWORK ACTION: Make the header a flexbox... */
 .header h1 {
   display: inline-block;
+  padding-left: 30px;
 }
 
 .header nav {
@@ -17,6 +17,14 @@
 .header li {
   display: inline-block;
   padding-right: 25px;
+}
+
+.background {
+  height: 400px;
+  width: 100%;
+  background-image: url("../images/seattle.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 main {
@@ -71,6 +79,52 @@ main {
   display: inline-block;
   padding-top: 40px;
   padding-right: 40px;
+}
+
+.img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.work-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.work-images img {
+  border: 4px;
+  border-style: solid;
+  border-color: black;
+  margin: 5px;
+}
+
+#project-1 {
+  width: 100%;
+  position: relative;
+}
+
+#project-2 {
+  width: 50%;
+  position: relative;
+}
+#project-3 {
+  width: 50%;
+  position: relative;
+}
+
+.img-title {
+  position: absolute;
+  top: 33%;
+  margin: 5px;
+  padding-left: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: black;
+  color: white;
+  width: 150px;
+}
+
+.content-work {
+  width: 70%;
 }
 
 .footer {
