Added titles for projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,14 +81,19 @@ main {
   padding-right: 40px;
 }
 
-.img {
-  max-width: 100%;
+.img-large {
+  width: 100%;
+  max-height: 100%;
+}
+.img-small {
+  width: 100%;
   max-height: 100%;
 }
 
 .work-images {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .work-images img {
   border: 4px;
@@ -103,11 +108,11 @@ main {
 }
 
 #project-2 {
-  width: 50%;
+  width: 48.5%;
   position: relative;
 }
 #project-3 {
-  width: 50%;
+  width: 48.5%;
   position: relative;
 }
 
