Added tool tips and URLs for work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,42 @@
   padding-right: 25px;
 }
 
-.background {
+span[data-tooltip] {
+  position: relative;
+  text-decoration: underline;
+  color: #000;
+}
+
+span[data-tooltip]:hover::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  left: 0px;
+  bottom: 24px;
+  min-width: 100px;
+  background-color: black;
+  padding: 12px;
+  color: white;
+  font-size: 70%;
+  z-index: 10;
+}
+.background-banner {
   height: 400px;
   width: 100%;
   background-image: url("../images/seattle.jpg");
   background-size: cover;
   background-position: center;
+}
+
+.background-project5 {
+  height: 90%;
+  width: 100%;
+  background-image: url("../images/jp-choose-your-own.jpg");
+  background-size: cover;
+  background-position: center;
+  border: 4px;
+  border-style: solid;
+  border-color: black;
+  margin: 5px;
 }
 
 main {
@@ -104,6 +134,7 @@ main {
 
 #project-1 {
   width: 100%;
+  /* max-height: 250px; */
   position: relative;
 }
 
@@ -115,17 +146,26 @@ main {
   width: 48.5%;
   position: relative;
 }
+#project-4 {
+  width: 48.5%;
+  position: relative;
+}
+#project-5 {
+  width: 48.5%;
+  position: relative;
+}
 
 .img-title {
   position: absolute;
   top: 33%;
   margin: 5px;
   padding-left: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  /* padding-top: 15px; */
+  /* padding-bottom: 15px; */
   background-color: black;
   color: white;
-  width: 150px;
+  width: 275px;
+  font-size: 80%;
 }
 
 .content-work {
