--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ span[data-tooltip] {
 span[data-tooltip]:hover::after {
   content: attr(data-tooltip);
   position: absolute;
-  left: 0px;
+  left: 5.5px;
   bottom: 24px;
   min-width: 100px;
   background-color: black;
@@ -44,6 +44,23 @@ span[data-tooltip]:hover::after {
   background-size: cover;
   background-position: center;
 }
+.background {
+  position: relative;
+}
+.background-title {
+  position: absolute;
+  width: 300px;
+  right: 0px;
+  top: 10%;
+  padding: 10px;
+  background-color: black;
+  color: white;
+  font-size: 80%;
+}
+
+.background-title p {
+  font-size: 90%;
+}
 
 main {
   padding-top: 30px;
@@ -55,7 +72,7 @@ main {
   flex-basis: 130px;
   flex-grow: 0;
   flex-shrink: 0;
-  border-right: 3px solid black;
+  border-right: 4px solid black;
   text-align: right;
   padding-right: 20px;
 }
@@ -71,6 +88,7 @@ main {
   order: 0;
   padding-bottom: 50px;
 }
+
 .work {
   display: flex;
   width: 100%;
@@ -82,6 +100,17 @@ main {
   width: 100%;
   order: 2;
   padding-bottom: 50px;
+}
+
+/* .img-container {
+  display: flex;
+  justify-content: center;
+} */
+
+.about img {
+  border: 4px;
+  border-style: solid;
+  border-color: black;
 }
 
 /* using flex allows you to control where you want the contact details and links to show on the page */
@@ -122,8 +151,13 @@ main {
   margin: 5px;
 }
 
+.work-background:hover {
+  box-shadow: 10px 10px 8px #888888;
+  cursor: pointer;
+}
+
 #background-project1 {
-  height: 350px;
+  height: 300px;
   width: 100%;
   background-image: url("../images/retro-systems.jpg");
 }
